--- a/index.html
+++ b/index.html
@@ -35,14 +35,17 @@
         <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
         <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
       </li>
+
       <li>
         <h3>ПУНКТУАЛЬНІСТЬ</h3>
         <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
       </li>
+
       <li>
         <h3>ПЛАНУВАННЯ</h3>
         <p>Так само консультація з широким активом значною мірою зумовлює.</p>
       </li>
+      
       <li>
         <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
         <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
@@ -58,7 +61,41 @@
       <li><img src="./images/box3.jpg" alt="Фото3"></li>
     </ul>
   </section>
-  
+
+  <section>
+    <h2>Наша команда</h2>
+    <ul>
+      <li>
+        <img src="" alt="">
+        <h3></h3>
+        <p></p>
+      </li>
+
+      <li>
+        <img src="" alt="">
+        <h3></h3>
+        <p></p>
+      </li>
+
+      <li>
+        <img src="" alt="">
+        <h3></h3>
+        <p></p>
+      </li>
+
+      <li>
+        <img src="" alt="">
+        <h3></h3>
+        <p></p>
+      </li>
+
+      <li>
+        <img src="" alt="">
+        <h3></h3>
+        <p></p>
+      </li>
+    </ul>
+  </section>
 
 </body>
 
