--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <header>
     <nav>
-      <a href="./">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <ul>
-        <li> <a href="">Студія</a></li>
+        <li> <a href="./index.html">Студія</a></li>
         <li> <a href="">Портфоліо</a></li>
         <li> <a href="">Контакти</a></li>
       </ul>
@@ -23,46 +23,52 @@
     </ul>
   </header>
 
-  <section>
-    <h1>Ефективні рішення для вашого бізнесу</h1>
-    <button type="button">Замовити послугу</button>
-  </section>
+  <main>
 
-  <section>
-    <h2>Наші переваги</h2>
-    <ul>
-      <li>
-        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-      </li>
+    <!-- Ефективні рішення для вашого бізнесу -->
+    <section>
+      <h1>Ефективні рішення для вашого бізнесу</h1>
+      <button type="button">Замовити послугу</button>
+    </section>
 
-      <li>
-        <h3>ПУНКТУАЛЬНІСТЬ</h3>
-        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-      </li>
+    <!-- Наші переваги -->
+    <section>
+     <h2>Наші переваги</h2>
+     <ul>
+       <li>
+         <h3>Увага до деталей</h3>
+         <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+       </li>
 
-      <li>
-        <h3>ПЛАНУВАННЯ</h3>
-        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-      </li>
+       <li>
+         <h3>Пунктуальність</h3>
+         <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+       </li>
+
+       <li>
+         <h3>Планування</h3>
+         <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+       </li>
       
-      <li>
-        <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-      </li>
-    </ul>
-  </section>
+       <li>
+         <h3>Сучасні технології</h3>
+         <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+       </li>
+     </ul>
+    </section>
 
-  <section>
+    <!-- Чим ми займаємося -->
+    <section>
     <h2>Чим ми займаємося</h2>
     <ul>
       <li><img src="./images/box1.jpg" alt="Фото1"></li>
       <li><img src="./images/box2.jpg" alt="Фото2"></li>
       <li><img src="./images/box3.jpg" alt="Фото3"></li>
     </ul>
-  </section>
+    </section>
 
-  <section>
+    <!-- Наша команда -->
+    <section>
     <h2>Наша команда</h2>
     <ul>
       <li>
@@ -95,8 +101,8 @@
         <p></p>
       </li>
     </ul>
-  </section>
-
+    </section>
+  </main>
 </body>
 
 
