--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <section>
     <h2>Чим ми займаємося</h2>
     <ul>
-      <li><img src="./images/box1.jpg" alt="Фото1"></li>
-      <li><img src="./images/box2.jpg" alt="Фото2"></li>
-      <li><img src="./images/box3.jpg" alt="Фото3"></li>
+      <li><img src="./images/box1.jpg" alt="Хтось друкує на клавіатурі"></li>
+      <li><img src="./images/box2.jpg" alt="Людина з телефоном та ноутбуком"></li>
+      <li><img src="./images/box3.jpg" alt="Планшет з різнокольоровим зображенням"></li>
     </ul>
     </section>
 
@@ -72,33 +72,27 @@
     <h2>Наша команда</h2>
     <ul>
       <li>
-        <img src="" alt="">
-        <h3></h3>
-        <p></p>
+        <img src="./images/our-team/img(1).jpg" alt="Фото Ігоря Дем'яненко">
+        <h3>Ігор Дем'яненко</h3>
+        <p lang="en">Product Designer</p>
       </li>
 
       <li>
-        <img src="" alt="">
-        <h3></h3>
-        <p></p>
+        <img src="./images/our-team/img(2).jpg" alt="Фото Ольги Рєпіної">
+        <h3>Ольга Рєпіна</h3>
+        <p lang="en">Frontend Developer</p>
       </li>
 
       <li>
-        <img src="" alt="">
-        <h3></h3>
-        <p></p>
+        <img src="./images/our-team/img(3).jpg" alt="Фото Миколи Тарасова">
+        <h3>Микола Тарасов</h3>
+        <p lang="en">Marketing</p>
       </li>
 
       <li>
-        <img src="" alt="">
-        <h3></h3>
-        <p></p>
-      </li>
-
-      <li>
-        <img src="" alt="">
-        <h3></h3>
-        <p></p>
+        <img src="./images/our-team/img(4).jpg" alt="Фото Михайла Єрмакова">
+        <h3>Михайло Єрмаков</h3>
+        <p lang="en">UI Designer</p>
       </li>
     </ul>
     </section>
