--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <section>
     <h2>Чим ми займаємося</h2>
     <ul>
-      <li><img src="./images/box1.jpg" alt="Хтось друкує на клавіатурі"></li>
-      <li><img src="./images/box2.jpg" alt="Людина з телефоном та ноутбуком"></li>
-      <li><img src="./images/box3.jpg" alt="Планшет з різнокольоровим зображенням"></li>
+      <li><img src="./images/box1.jpg" alt="Хтось друкує на клавіатурі" width="370"></li>
+      <li><img src="./images/box2.jpg" alt="Людина з телефоном та ноутбуком" width="370"></li>
+      <li><img src="./images/box3.jpg" alt="Планшет з різнокольоровим зображенням" width="370"></li>
     </ul>
     </section>
 
@@ -72,25 +72,25 @@
     <h2>Наша команда</h2>
     <ul>
       <li>
-        <img src="./images/our-team/img(1).jpg" alt="Фото Ігоря Дем'яненко">
+        <img src="./images/our-team/img(1).jpg" alt="Фото Ігоря Дем'яненко" width="270">
         <h3>Ігор Дем'яненко</h3>
         <p lang="en">Product Designer</p>
       </li>
 
       <li>
-        <img src="./images/our-team/img(2).jpg" alt="Фото Ольги Рєпіної">
+        <img src="./images/our-team/img(2).jpg" alt="Фото Ольги Рєпіної" width="270">
         <h3>Ольга Рєпіна</h3>
         <p lang="en">Frontend Developer</p>
       </li>
 
       <li>
-        <img src="./images/our-team/img(3).jpg" alt="Фото Миколи Тарасова">
+        <img src="./images/our-team/img(3).jpg" alt="Фото Миколи Тарасова" width="270">
         <h3>Микола Тарасов</h3>
         <p lang="en">Marketing</p>
       </li>
 
       <li>
-        <img src="./images/our-team/img(4).jpg" alt="Фото Михайла Єрмакова">
+        <img src="./images/our-team/img(4).jpg" alt="Фото Михайла Єрмакова" width="270">
         <h3>Михайло Єрмаков</h3>
         <p lang="en">UI Designer</p>
       </li>
